--- a/style.css
+++ b/style.css
@@ -65,12 +65,17 @@ body {
   text-align: center;
 }
 
-.logo img {
-  max-width: 100px; /* adjust size here */
-  height: auto;
-  display: block;
-  margin: 0 auto 0.5em;
+.logo-background-header {
+  width: 100vw;
+  height: 40vh; /* adjusts to screen height */
+  background: url('backgroundhero_2.png') no-repeat center center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
 
 
 
@@ -582,6 +587,7 @@ footer::before {
   background-size: cover;
   pointer-events: none;
 }
+
 
 
 
